Changing to a log in page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-    <h1>Enter the texts to be compared</h1>
+    <h1>DnD Battle Tracker (Coming Soon tm)</h1>
     <form action="." method="POST">
-        <input type="text" name="text1">
-        <input type="text" name="text2">
-        <input type="submit" name="my-form" value="Check !">
+        <label for="user_name">User Name:</label>
+        <input type="text" name="user_name" id="user_name"><br>
+        <label for="password">Password:</label>&nbsp;&nbsp;&nbsp;
+        <input type="password" name="password" id="password"><br><br>
+        <input type="submit" name="my-form" value="Log In"><br>
+        <input type="submit" name="new-user" value="New User">
     </form>
 </body>
 </html>
