--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <input type="text" name="user_name" id="user_name"><br>
         <label for="password">Password:</label>&nbsp;&nbsp;&nbsp;
         <input type="password" name="password" id="password"><br><br>
-        <input type="login"    name="login" value="Log In"><br>
-        <input type="new_user" name="new-user" value="New User">
+        <input type="submit" name="login"    value="Log In"><br>
+        <input type="submit" name="new-user" value="New User">
     </form>
 </body>
 </html>
