--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Flask Form</title>
 </head>
 <body>
-    <h1>Flask Form with Multiple Actions</h1>
+    <h1>DnD Battle Tracker Login!</h1>
     <form action="/submit" method="post" style="display:inline;">
         <label for="username">Username:</label>
         <input type="text" name="username" id="username" required><br><br>
