--- a/main_menu.html
+++ b/main_menu.html
@@ -11,8 +11,8 @@
     <form action="/submit" method="post" style="display:inline;">
         <label>1)Create a Campaign</label><br>
         <label>2)Log into a Campaign</label><br>
-        <button type="main_submit">Submit</button>
-        <input type="hidden" name="user_main_menu" id="user_main_menu" value="">
+        <input type="text" name="user_input_main_menu" id="user_input_main_menu" required><br><br>
+        <button type="main_menu_submit">Submit</button>
     </form>
 </body>
 </html>
