--- a/main_menu.html
+++ b/main_menu.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>Choose an Option:</h1>
-    <form action="/submit" method="post" style="display:inline;">
+    <form action="/main_menu_submit" method="post" style="display:inline;">
         <label>1)Create a Campaign</label><br>
         <label>2)Log into a Campaign</label><br>
         <input type="text" name="user_input_main_menu" id="user_input_main_menu" required><br><br>
-        <button type="main_menu_submit">Submit</button>
+        <button type="main_menu_submit">Submit!</button>
     </form>
 </body>
 </html>
