--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <label for="password">Password:</label>
         <input type="password" name="password" id="password" required><br><br>
         
-        <button type="submit">Submit</button>
+        <button type="submit">Admin</button>
     </form>
 
     <form action="/login" method="post" style="display:inline;">
