--- a/main_menu.html
+++ b/main_menu.html
@@ -7,7 +7,8 @@
     <title>Main Menu</title>
 </head>
 <body>
-    <h1>Choose an Option:</h1>
+    <h1>Welcome {{username}}</h1>
+    <h2>Choose an Option:</h2>
     <form action="/main_menu_submit" method="post" style="display:inline;">
         <label>1)Create a Campaign</label><br>
         <label>2)Log into a Campaign</label><br>
