--- a/index.html
+++ b/index.html
@@ -11,35 +11,13 @@
     <form action="/submit" method="post" style="display:inline;">
         <label for="username">Username:</label>
         <input type="text" name="username" id="username" required><br><br>
-        
+
         <label for="password">Password:</label>
         <input type="password" name="password" id="password" required><br><br>
-        
+
         <button type="submit">Admin</button>
+        <button type="login">Login</button>
+        <button type="new_user">New User</button>
     </form>
-
-    <form action="/login" method="post" style="display:inline;">
-        <input type="hidden" name="username" id="username-hidden" value="">
-        <input type="hidden" name="password" id="password-hidden" value="">
-        <button type="submit">Login</button>
-    </form>
-
-    <form action="/new_user" method="post" style="display:inline;">
-        <input type="hidden" name="username" id="username-hidden2" value="">
-        <input type="hidden" name="password" id="password-hidden2" value="">
-        <button type="submit">New User</button>
-    </form>
-
-    <script>
-        // This script ensures the input data from the first form is transferred to the other forms
-        document.querySelectorAll('input').forEach(input => {
-            input.addEventListener('input', () => {
-                document.getElementById('username-hidden').value = document.getElementById('username').value;
-                document.getElementById('password-hidden').value = document.getElementById('password').value;
-                document.getElementById('username-hidden2').value = document.getElementById('username').value;
-                document.getElementById('password-hidden2').value = document.getElementById('password').value;
-            });
-        });
-    </script>
 </body>
 </html>
