Creating and using login.py

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <label for="password">Password:</label>
         <input type="password" name="password" id="password" required><br><br>
 
-        <button type="submit">Admin</button>
-        <button type="login">Login</button>
-        <button type="new_user">New User</button>
+        <button type="submit" name="action" value="admin">Admin</button>
+        <button type="submit" name="action" value="login">Login</button>
+        <button type="submit" name="action" value="new_user">New User</button>
     </form>
 </body>
 </html>
