Passing username through a hidden input

--- a/campaign_menu.html
+++ b/campaign_menu.html
@@ -14,6 +14,7 @@
         <button type="submit" name="action" value="create">Create a Campaign</button><br><br>
         <button type="submit" name="action" value="delete">Delete a Campaign</button><br><br>
         <button type="submit" name="action" value="main_menu">Return to Main Menu</button>
+        <input type="hidden" name="username" value="{{username}}">
     </form>
 </body>
 </html>
