Adding username hidden to main_menu.html

--- a/main_menu.html
+++ b/main_menu.html
@@ -12,6 +12,7 @@
     <form action="/main_menu_submit" method="post" style="display:inline;">
         <button type="submit" name="action" value="character">Character Menu</button><br><br>
         <button type="submit" name="action" value="campaign">Campaign Menu</button>
+        <input type="hidden" name="username" value="{{username}}">
     </form>
 </body>
 </html>
