Initial functionality of Campaign screen

--- a/campaign_menu.html
+++ b/campaign_menu.html
@@ -7,9 +7,9 @@
     <title>Campaign Menu</title>
 </head>
 <body>
-    <h1>{{username}}'s Character Screen</h1>
+    <h1>{{username}}'s Campaign Screen</h1>
     <h2>Choose an Option:</h2>
-    <form action="/main_menu_submit" method="post" style="display:inline;">
+    <form action="/campaign_menu_submit" method="post" style="display:inline;">
         <button type="submit" name="action" value="play">Play a Campaign</button><br><br>
         <button type="submit" name="action" value="create">Create a Campaign</button><br><br>
         <button type="submit" name="action" value="delete">Delete a Campaign</button><br><br>
