--- a/campaign_action.html
+++ b/campaign_action.html
@@ -7,7 +7,7 @@
     <title>Campaign {{user_action}}</title>
 </head>
 <body>
-    <h1>{{username}}'s Campaign Screen</h1>
+    <h1>{{msg}}</h1>
     <h2>Choose an Option:</h2>
     <form action="/campaign_action_submit" method="post" style="display:inline;">
         <button type="submit" name="action" value="return">Return</button><br><br>
