Removing required tag from DM password

--- a/campaign_menu.html
+++ b/campaign_menu.html
@@ -16,7 +16,7 @@
         <input type="password" name="campaign_password" id="campaign_password" required><br><br>
 
         <label for="dm_password">DM's Campaign Password:</label><br>
-        <input type="password" name="dm_password" id="dm_password" required><br><br>
+        <input type="password" name="dm_password" id="dm_password"><br><br>
 
         <h2>Choose an Option:</h2>
         <button type="submit" name="action" value="play">Play a Campaign</button><br><br>
