--- a/campaign_menu.html
+++ b/campaign_menu.html
@@ -10,10 +10,10 @@
     <h1>{{username}}'s Campaign Screen</h1>
     <form action="/campaign_menu_submit" method="post" style="display:inline;">
         <label for="campaign">Campaign</label><br>
-        <input type="text" name="campaign" id="campaign" required><br><br>
+        <input type="text" name="campaign" id="campaign"><br><br>
 
         <label for="campaign_password">Campaign Password:</label><br>
-        <input type="password" name="campaign_password" id="campaign_password" required><br><br>
+        <input type="password" name="campaign_password" id="campaign_password"><br><br>
 
         <label for="dm_password">DM's Campaign Password:</label><br>
         <input type="password" name="dm_password" id="dm_password"><br><br>
