Initial Character side updates

--- a/campaign_menu.html
+++ b/campaign_menu.html
@@ -9,7 +9,7 @@
 <body>
     <h1>{{username}}'s Campaign Screen</h1>
     <form action="/campaign_menu_submit" method="post" style="display:inline;">
-        <label for="campaign">Campaign</label><br>
+        <label for="campaign">Campaign:</label><br>
         <input type="text" name="campaign" id="campaign"><br><br>
 
         <label for="campaign_password">Campaign Password:</label><br>
