Passing campaign name and character create

--- a/character_action.html
+++ b/character_action.html
@@ -9,8 +9,8 @@
 <body>
     <h1>{{username}}'s Character Action Screen</h1>
     <form action="/character_action_submit" method="post" style="display:inline;">
-        <label for="campaign_password">Campaign Name:</label><br>
-        <input type="text" name="campaign_password" id="campaign_password"><br><br>
+        <label for="campaign_name">Campaign Name:</label><br>
+        <input type="text" name="campaign_name" id="campaign_name"><br><br>
 
         <h2>Choose an Option:</h2>
         <button type="submit" name="action" value="{{user_action}}">{{user_action}}</button><br><br>
