Render create_character.html

--- a/create_character.html
+++ b/create_character.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>{{username}}'s Character Creation Screen</h1>
+    <h2>Create a Character for {{campaign}}</h2>
     <form action="/character_create_submit" method="post" style="display:inline;">
         <label for="character_name">Character Name:</label><br>
         <input type="text" name="character_name" id="character_name"><br><br>
