Character creation and list tables

--- a/create_character.html
+++ b/create_character.html
@@ -23,6 +23,7 @@
         <button type="submit" name="action" value="create">Create!</button><br><br>
         <button type="submit" name="action" value="main_menu">Return to Main Menu</button>
         <input type="hidden" name="username" value="{{username}}">
+        <input type="hidden" name="campaign" value="{{campaign}}">
     </form>
 </body>
 </html>
