Cleaning up login

--- a/main_menu.html
+++ b/main_menu.html
@@ -7,7 +7,7 @@
     <title>Main Menu</title>
 </head>
 <body>
-    <h1>Welcome {{username}}</h1>
+    <h1>Welcome {{msg}} {{username}}</h1>
     <h2>Choose an Option:</h2>
     <form action="/main_menu_submit" method="post" style="display:inline;">
         <button type="submit" name="action" value="character">Character Menu</button><br><br>
