using pre instead of span

--- a/play.html
+++ b/play.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Real-Time Field Update</h1>
-    <p>Field Value: <span id="fieldValue">{{ field_value }}</span></p>
+    <p>Field Value:</p>
+    <pre id="fieldValue">{{ field_value }}</pre>
 
     <input type="text" id="newValue" placeholder="Enter new value">
     <button onclick="updateField()">Update Field</button>
