Cosmetic updates on play.html take 2

--- a/play.html
+++ b/play.html
@@ -11,8 +11,9 @@
     <p>Field Value:</p>
     <pre id="fieldValue">{{ field_value }}</pre>
 
-    <input type="text" id="newValue" placeholder="Enter new value">
-    <button onclick="updateField()">Update Field</button>
+    <input type="text" id="character_name" placeholder="Enter Character">
+    <input type="text" id="new_health" placeholder="Enter New Health">
+    <button onclick="updateField()">Update Battle</button><br><br>
 
     <script>
         // Connect to the SocketIO server
@@ -41,9 +42,7 @@
         }
     </script>
 
-    <h1>{{msg}}</h1>
     <form action="/play_submit" method="post" style="display:inline;">
-        <h2>Choose an Option:</h2>
         <button type="submit" name="action" value="main_menu">Return to Main Menu</button>
         <input type="hidden" name="username" value="{{username}}">
     </form>
