small change to play.html

--- a/play.html
+++ b/play.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>{{Campaign}}</h1>
-    <p>Field Value:</p>
+    <p>Battle:</p>
     <pre id="fieldValue">{{ field_value }}</pre>
 
     <input type="text" id="newValue" placeholder="Enter new value">
-    <button onclick="updateField()">Update Field</button>
+    <button onclick="updateField()">Update Field</button><br><br>
 
     <script>
         // Connect to the SocketIO server
@@ -42,7 +42,6 @@
     </script>
 
     <form action="/play_submit" method="post" style="display:inline;">
-        <h2>Choose an Option:</h2>
         <button type="submit" name="action" value="main_menu">Return to Main Menu</button>
         <input type="hidden" name="username" value="{{username}}">
     </form>
