--- a/play.html
+++ b/play.html
@@ -11,8 +11,8 @@
     <p>Battle:</p>
     <pre id="fieldValue">{{ field_value }}</pre>
 
-    <input type="text" id="newValue" placeholder="Enter Character">
-    <input type="text" id="new_health" placeholder="Enter New Health">
+    <input type="text" id="character_name" placeholder="Enter Character">
+    <input type="text" id="current_health" placeholder="Enter New Health">
     <button onclick="updateField()">Update Field</button><br><br>
 
     <script>
