updating html body and script

--- a/play.html
+++ b/play.html
@@ -11,8 +11,8 @@
     <p>Battle:</p>
     <pre id="fieldValue">{{ field_value }}</pre>
 
-    <input type="text" id="newValue" placeholder="Enter Character">
-    <input type="text" id="new_health" placeholder="Enter New Health">
+    <input type="text" id="character_name" placeholder="Enter Character">
+    <input type="text" id="current_health" placeholder="Enter New Health">
     <button onclick="updateField()">Update Field</button><br><br>
 
     <script>
@@ -36,7 +36,8 @@
         function updateField() {
             const newValue = document.getElementById('newValue').value;
             socket.emit('update_field', {
-                new_value: newValue,
+                character_name: character_name
+                current_health: current_health
                 campaign: campaign
             });
         }
