--- a/play.html
+++ b/play.html
@@ -34,7 +34,8 @@
 
         // Emit an event to update the field
         function updateField() {
-            const newValue = document.getElementById('newValue').value;
+            const character_name = document.getElementById('character_name').value;
+            const current_health = document.getElementById('current_health').value;
             socket.emit('update_field', {
                 character_name: character_name
                 current_health: current_health
