play.html better visuals

--- a/play.html
+++ b/play.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>{{campaign}}</h1>
-    <p>Battle:</p>
+    <h2>{{username}}'s View:</h2>
     <pre id="fieldValue">{{ field_value }}</pre>
 
     <input type="text" id="character_name" placeholder="Enter Character">
