If NPC doesn't exist add to battle!

--- a/play_dm.html
+++ b/play_dm.html
@@ -11,7 +11,7 @@
     <h2>{{username}}'s View:</h2>
     <pre id="fieldValue">{{ field_value }}</pre>
 
-    <input type="text" id="character_name" placeholder="Enter Character">
+    <input type="text" id="character_name" placeholder="Enter Character/NPC">
     <input type="text" id="current_health" placeholder="Enter New Health">
     <input type="text" id="initiative" placeholder="Enter New Initiative">
     <button onclick="updateField()">Update Character</button><br><br>
