--- a/play_dm.html
+++ b/play_dm.html
@@ -11,10 +11,12 @@
     <h2>{{username}}'s View:</h2>
     <pre id="fieldValue">{{ field_value }}</pre>
 
-    <input type="text" id="character_name" placeholder="Enter Character/NPC">
+    <input type="text" id="character_name" placeholder="Enter Character">
     <input type="text" id="current_health" placeholder="Enter New Health">
     <input type="text" id="initiative" placeholder="Enter New Initiative">
     <button onclick="updateField()">Update Character</button><br><br>
+    <input type="text" id="new_npc" placeholder="Enter NPC">
+    <button onclick="updateField()">Add NPC</button><br><br>
 
     <script>
         // Connect to the SocketIO server
@@ -38,11 +40,13 @@
             const character_name = document.getElementById('character_name').value;
             const current_health = document.getElementById('current_health').value;
             const initiative = document.getElementById('initiative').value;
+            const new_npc    = document.getElementById('new_npc').value;
             socket.emit('update_field', {
                 character_name: character_name,
                 current_health: current_health,
                 initiative: initiative,
-                campaign: campaign
+                campaign: campaign,
+                new_npc: new_npc
             });
         }
     </script>
