Only add npc if clicked button

--- a/play_dm.html
+++ b/play_dm.html
@@ -14,9 +14,9 @@
     <input type="text" id="character_name" placeholder="Enter Character">
     <input type="text" id="current_health" placeholder="Enter New Health">
     <input type="text" id="initiative" placeholder="Enter New Initiative">
-    <button onclick="updateField()">Update Character</button><br><br>
+    <button name = "action"  value = "update_character" onclick="updateField()">Update Character</button><br><br>
     <input type="text" id="new_npc" placeholder="Enter NPC">
-    <button onclick="updateField()">Add NPC</button><br><br>
+    <button name = "action"  value = "add_npc" onclick="updateField()">Add NPC</button><br><br>
 
     <script>
         // Connect to the SocketIO server
