Only add NPCs if no character name and reset text boxes after button click.

--- a/play_dm.html
+++ b/play_dm.html
@@ -47,6 +47,11 @@
                 initiative: initiative,
                 campaign: campaign,
             });
+
+            document.getElementById('character_name').value = '';
+            document.getElementById('current_health').value = '';
+            document.getElementById('initiative').value = '';
+            document.getElementById('new_npc').value = '';
         }
     </script>
 
