--- a/play_dm.html
+++ b/play_dm.html
@@ -14,9 +14,9 @@
     <input type="text" id="character_name" placeholder="Enter Character">
     <input type="text" id="current_health" placeholder="Enter New Health">
     <input type="text" id="initiative" placeholder="Enter New Initiative">
-    <button name = "action"  value = "update_character" onclick="updateField()">Update Character</button><br><br>
+    <button onclick="updateField()">Update Character</button><br><br>
     <input type="text" id="new_npc" placeholder="Enter NPC">
-    <button id= "add_npc" name = "action"  value = "add_npc" onclick="updateField()">Add NPC</button><br><br>
+    <button onclick="updateField()">Add NPC</button><br><br>
 
     <script>
         // Connect to the SocketIO server
@@ -46,6 +46,7 @@
                 current_health: current_health,
                 initiative: initiative,
                 campaign: campaign,
+                new_npc: new_npc
             });
 
             document.getElementById('character_name').value = '';
