Adding colors try 2

--- a/play.html
+++ b/play.html
@@ -9,7 +9,7 @@
 <body>
     <h1>{{campaign}}</h1>
     <h2>{{username}}'s View:</h2>
-    <pre id="fieldValue">{{ field_value }}</pre>
+    <p id="fieldValue">{{ field_value }}</p>
 
     <script>
         // Connect to the SocketIO server
