--- a/play.html
+++ b/play.html
@@ -9,7 +9,7 @@
 <body>
     <h1>{{campaign}}</h1>
     <h2>{{username}}'s View:</h2>
-    <p id="fieldValue">{{ field_value }}</p>
+    {{ field_value }}
 
     <script>
         // Connect to the SocketIO server
