Adding colors try 4

--- a/play.html
+++ b/play.html
@@ -9,7 +9,7 @@
 <body>
     <h1>{{campaign}}</h1>
     <h2>{{username}}'s View:</h2>
-    {{ field_value }}
+    <pre id="fieldValue">{{ field_value }}</pre>
 
     <script>
         // Connect to the SocketIO server
