--- a/play_dm.html
+++ b/play_dm.html
@@ -9,7 +9,7 @@
 <body>
     <h1>{{campaign}}</h1>
     <h2>{{username}}'s View:</h2>
-    <p id="fieldValue">{{ field_value }}</p>
+    <pre id="fieldValue">{{ field_value }}</pre>
 
     <input type="text" id="character_name" placeholder="Enter Character/NPC">
     <input type="text" id="current_health" placeholder="Enter New Health">
