Update for player

--- a/play.html
+++ b/play.html
@@ -47,7 +47,8 @@
             document.getElementById('current_health').value = '';
             document.getElementById('initiative').value = '';
             document.getElementById('new_npc').value = '';
-        }t>
+        }
+    </script>
 
     <form action="/play_submit" method="post" style="display:inline;">
         <button type="submit" name="action" value="main_menu">Return to Main Menu</button>
